# rust-react-chat

./: .gitignore  Cargo.toml  README.md  chat.db  diesel.toml  justfile  up.sql
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/context/: user.ts  ws.ts
frontend/src/hooks/: useWS.ts
frontend/src/routes/Auth/: Auth.tsx
frontend/src/routes/Chat/: Chat.tsx
frontend/src/routes/ChatIndex/: ChatIndex.tsx
frontend/src/routes/ChatRoom/: ChatRoom.tsx
frontend/src/routes/Home/: Home.tsx
frontend/src/utils/: index.ts
frontend/types/: index.ts
migrations/2024-09-01-121805_create_users/: up.sql
migrations/2024-09-07-052738_references/: up.sql
migrations/2024-09-07-121310_fix-reference-fields/: down.sql  up.sql
migrations/2024-09-07-164615_add_owner_for_room/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs  server.rs  session.rs  types.rs  utils.rs
src/db/: conversations.rs  rooms.rs  rooms_users.rs  users.rs
src/middlewares/: auth.rs
src/routes/: auth.rs  conversations.rs  rooms.rs  users.rs  ws.rs
src/services/: rooms.rs  users.rs
ui/: next.config.mjs  package.json  pnpm-lock.yaml
ui/components/: avatar.tsx  conversation.tsx  login.tsx  rooms.tsx
ui/libs/: useConversation.ts  useLocalStorage.ts  useWebsocket.ts
ui/pages/: index.tsx
